--- a/FinanceManager.Persistence/FinanceManager.Persistence.csproj
+++ b/FinanceManager.Persistence/FinanceManager.Persistence.csproj
@@ -17,10 +17,10 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FinanceManager.Application\FinanceManager.Application.csproj" />
     <ProjectReference Include="..\FinanceManager.Domain\FinanceManager.Domain.csproj" />
   </ItemGroup>
 
