Добавил логирование и отправку сообщений

--- a/FinanceManager.Api/appsettings.json
+++ b/FinanceManager.Api/appsettings.json
@@ -8,5 +8,29 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FinanceManagerDatabaseConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FinanceManagerDB;Integrated Security=True"
+  },
+  "EmailSettings": {
+    "FromMail": "no.reply.api1@gmail.com",
+    "FromPassword": "uinl gciw xzwc fiue",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
