Добавил сервисы для генерации refresh и access токенов

--- a/FinanceManager.Api/appsettings.json
+++ b/FinanceManager.Api/appsettings.json
@@ -32,5 +32,11 @@
         }
       }
     ]
+  },
+  "JwtSettings": {
+    "Key": "9df1a177-ff1c-411b-8dfd-0ab53ecf81cfe0d17957-df61-48d0-92bd-aa0035d32a22",
+    "Issuer": "FinanceManagerApi",
+    "Audience": "FinanceManagerApiUser",
+    "DurationInMinutes": 60
   }
 }
