--- a/FinanceManager.Application/FinanceManager.Application.csproj
+++ b/FinanceManager.Application/FinanceManager.Application.csproj
@@ -12,9 +12,11 @@
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Users\Queries\" />
     <Folder Include="MappingProfiles\" />
   </ItemGroup>
 
