Убрал accessToken из базы данных, добавил токены для подтверждения регистрации, смены почты и смены пароля, если пользователь его забыл

--- a/FinanceManager.Api/appsettings.json
+++ b/FinanceManager.Api/appsettings.json
@@ -37,6 +37,10 @@
     "Key": "9df1a177-ff1c-411b-8dfd-0ab53ecf81cfe0d17957-df61-48d0-92bd-aa0035d32a22",
     "Issuer": "FinanceManagerApi",
     "Audience": "FinanceManagerApiUser",
-    "DurationInMinutes": 60
+    "AccessTokenDurationInMinutes": 60,
+    "RegistrationTokenDurationInMinutes": 60,
+    "ResetPasswordTokenDurationInMinutes": 60,
+    "ChangeEmailTokenDurationInMinutes": 60,
+    "RefreshTokenDurationInDays": 7
   }
 }
